[package]
name = "TagAllInstances"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.5"
tokio = { version = "1.47.1", features = ["full"] }
aws-sdk-ec2 = "1.162.0"
log = "0.4.27"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon = "1.11.0"
clap = "4.5.46"